# libwxnkf

./: .gitignore  COPYING  ChangeLog  Makefile  Makefile.am  Makefile.in  Makefile.osx.mk  NKFNativeEncoding.cpp  README  aclocal.m4  bootstrap  config.h.in  configure  configure.ac  cp932_sample.txt  libnkf.c  libnkf.h  test1.cpp
include/: FlagPool.h  GuessConv.h  InputCodeList.h  LibNKF.h  NKFBaseConfig.h  NKFEncoding.h  NKFNativeEncoding.h  NKFNativeEncodings.h  UTF16Util.h  UTF8Table.h  Util.h  util.h  wxnkfbaseconfig.h  wxnkfencoding.h
include/wx/: wxnkf.h
lib/: Makefile.am
src/: FlagPool.cpp  GuessConv.cpp  InputCodeList.cpp  LibNKF.cpp  Makefile.am  Makefile.in  NKFEncoding.cpp  NKFNativeEncoding.cpp  NKFNativeEncodings.cpp  UTF16Util.cpp  UTF8Table.cpp  Util.cpp  util.cpp  util.h  wxnkf.cpp  wxnkfbaseconfig.h  wxnkfencoding.cpp  wxnkfencoding.h
src/wx/: wxnkf.h
test/: CP932.txt  EUC-JP.txt  JIS.txt  Makefile  Makefile.am  Makefile.in  UTF-8.txt  UTF-8_BOM.txt  Unicode.txt  main.cpp  sample_cp932.txt  wxnkf-test1.cpp  wxnkf-test2.cpp
test1/: Makefile.am  Makefile.in  main.cpp
test2/: Makefile.am  Makefile.in  main.cpp
