noinst_LIBRARIES = libwxnkf.a

libwxnkf_a_SOURCES = flagset.cpp \
flagset.h			 \
utf16util.cpp			 \
utf16util.h			 \
utf8table.cpp			 \
utf8table.h			 \
util.cpp			 \
util.h				 \
wx/wxnkf.h			 \
wxnkf.cpp			 \
wxnkfbaseconfig.h		 \
wxnkfencoding.cpp		 \
wxnkfencoding.h

libwxnkf_a_CXXFLAGS = @CXXFLAGS@