noinst_LTLIBRARIES  = libwxnkf.la

libwxnkf_la_SOURCES = flagset.cpp                \
		      flagset.h			 \
		      utf16util.cpp		 \
		      utf16util.h		 \
		      utf8table.cpp		 \
		      utf8table.h		 \
		      util.cpp			 \
		      util.h			 \
		      wx/wxnkf.h		 \
		      wxnkf.cpp			 \
		      wxnkfbaseconfig.h		 \
		      wxnkfencoding.cpp		 \
		      wxnkfencoding.h

libwxnkf_la_CXXFLAGS = @CXXFLAGS@
libwxnkf_la_LDFLAGS  = -no-undefined -version-info 1:0:0